@@ -80,6 +80,8 @@ IMAGES = \
 	stock_media_pause_24.png	\
 	stock_media_play_16.png		\
 	stock_media_play_24.png		\
+	stock_media_play_rtl_16.png	\
+	stock_media_play_rtl_24.png	\
 	stock_media_previous_16.png	\
 	stock_media_previous_24.png	\
 	stock_media_record_16.png	\
@@ -252,6 +254,8 @@ VARIABLES3 = \
 	stock_media_pause_24	$(srcdir)/stock_media_pause_24.png	\
 	stock_media_play_16	$(srcdir)/stock_media_play_16.png	\
 	stock_media_play_24	$(srcdir)/stock_media_play_24.png	\
+	stock_media_play_rtl_16	$(srcdir)/stock_media_play_rtl_16.png	\
+	stock_media_play_rtl_24	$(srcdir)/stock_media_play_24.png	\
 	stock_media_previous_16	$(srcdir)/stock_media_previous_16.png	\
 	stock_media_previous_24	$(srcdir)/stock_media_previous_24.png	\
 	stock_media_record_16	$(srcdir)/stock_media_record_16.png	\
